@@ -1,0 +1,22 @@
+<gconfschemafile>
+
+  <schemalist>
+      <schema>
+      <key>/schemas/apps/logview/logfile</key>
+      <applyto>/apps/logview/logfile</applyto>
+      <owner>logview</owner>
+      <type>string</type>
+      <default></default>
+      <locale name="C">
+        <short>Log file to open up on startup</short>
+        <long>Specifies the log file to open up at startup.
+	      The default is either /var/adm/messages or 
+	      /var/log/messages, depending on your 
+	      distribution.
+       </long>
+      </locale>
+      </schema>
+      
+  </schemalist>
+  
+</gconfschemafile>
