@@ -1,3 +1,11 @@
+2002-07-05  Glynn Foster  <glynn.foster@sun.com>
+
+	* Makefile.am: Add install of schema
+	* logview.schemas.in: Add schemas.
+	* logview.c, logview.h, userprefsdialog.c: Get rid of old
+	unused cruft that you could set to change the size of your 
+	windows.
+
 2002-07-02  Deepa Natarajan  <deepa.natarajan@wipro.com> 
  
 	* logrtns.[ch], monitor.c: Rewrote ReadPageDown() and 
